# rusty

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
migrations/: 20231217174805_inital_migration.sql
src/: database.rs  events.rs  lib.rs  main.rs  structs.rs  utils.rs
src/commands/: fun.rs  general.rs  mod.rs  moderation.rs
src/database/: utils.rs
