[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serde = "1.0.193"
tracing = "0.1.40"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1.34"
features = [ "macros", "rt-multi-thread" ]

[dependencies.reqwest]
version = "0.11.22"
features = [ "json" ]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "current"

[dependencies.sea-orm]
version = "0.12"
features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ]