[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.tokio]
version = "1.35"
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.reqwest]
version = "0.11"
features = [ "json" ]

[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
branch = "current"

[dependencies.sqlx]
version = "0.7"
features = [ "runtime-tokio-rustls", "postgres", "time", "uuid" ]