[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
poise = "0.6"

[dependencies.tokio]
version = "1.41"
features = [ "macros", "rt-multi-thread", "signal" ]

[dependencies.reqwest]
version = "0.12"
features = [ "json" ]

[dependencies.sqlx]
version = "0.8"
features = [ "runtime-tokio-rustls", "postgres", "time", "uuid" ]
